objects/Cvent_Certifications__c.object
<CustomObject>
    <fields>
        <fullName>Certification_Expiry_Date__c</fullName>
        <label>Certification Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Level__c</fullName>
        <label>Certification Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Source__c</fullName>
        <label>Certification Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Online Training</fullName>
                </value>
                <value>
                    <fullName>Private Online Training</fullName>
                </value>
                <value>
                    <fullName>Public Workshop</fullName>
                </value>
                <value>
                    <fullName>Private Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <formula>IF(Certification_Expiry_Date__c  &gt;= TODAY(),"ACTIVE","INACTIVE")</formula>
        <label>Certification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Client_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extra_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Repeat__c</fullName>
        <label>New/Repeat?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pass_Percentage__c</fullName>
        <formula>If( Total_of_Students_Appeared__c  =0,0, of_Students_certified__c / Total_of_Students_Appeared__c)</formula>
        <label>Pass Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <label>Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Laura Puglisi</fullName>
                </value>
                <value>
                    <fullName>Layne Coffman</fullName>
                </value>
                <value>
                    <fullName>Lexi Pettigrew</fullName>
                </value>
                <value>
                    <fullName>Liz Bell</fullName>
                </value>
                <value>
                    <fullName>Samantha Blizzard</fullName>
                </value>
                <value>
                    <fullName>Stacey Wilson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <formula>Text(Year__c) &amp;" "&amp;Text(Time_of_Certification__c)</formula>
        <label>Semester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status with University</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Not at this time</fullName>
                </value>
                <value>
                    <fullName>No Status</fullName>
                    <default>true</default>
                    <label>No Status</label>
                </value>
                <value>
                    <fullName>Worked</fullName>
                </value>
                <value>
                    <fullName>Confirmed-Self Signup</fullName>
                </value>
                <value>
                    <fullName>Confirmed-Received Roster</fullName>
                </value>
                <value>
                    <fullName>UnResponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_CCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dont del its for uploads - Sangwan</description>
        <label>Temp CCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_of_Certification__c</fullName>
        <label>Semester (Time of Certification)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_of_Students_Appeared__c</fullName>
        <label>Total # of Students Appeared</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>University Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Client_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Students_Committed__c</fullName>
        <label># of Students Committed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Students_certified__c</fullName>
        <label># of Students Certified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Certification</label>
    <nameField>
        <displayFormat>CC#{000000}</displayFormat>
        <label>Cvent Certifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>CSN_Planner_Certification</fullName>
        <active>false</active>
        <label>CSN-Planner Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSN_Supplier_Certification</fullName>
        <active>true</active>
        <label>CSN-Supplier Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Certification</fullName>
        <active>true</active>
        <label>Event Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Event_App</fullName>
        <active>true</active>
        <description># 11471319</description>
        <label>Mobile Event App</label>
    </recordTypes>
    <recordTypes>
        <fullName>Passkey_Hotelier</fullName>
        <active>true</active>
        <description># 11471319</description>
        <label>Passkey Hotelier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Survey_Certification</fullName>
        <active>false</active>
        <description># 11471319</description>
        <label>Survey Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Certification</fullName>
        <active>false</active>
        <description># 11471319</description>
        <label>University Certification</label>
    </recordTypes>
    <validationRules>
        <fullName>Account_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN(University_Name__c)=0,
RecordTypeId  = "0120000000097vo"
)</errorConditionFormula>
        <errorDisplayField>University_Name__c</errorDisplayField>
        <errorMessage>Please associate relevant SF account with the certification record!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordTypeId  &lt;&gt; "0120000000097vo",
ISBLANK(Contact__c)
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Please update the Contact!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fields_should_not_have_0</fullName>
        <active>true</active>
        <description># of Students Committed, Total # of Students Appeared,# of Students Certified
should not have value as 0</description>
        <errorConditionFormula>OR(
of_Students_Committed__c=0,
of_Students_certified__c=0,
Total_of_Students_Appeared__c=0
)</errorConditionFormula>
        <errorMessage>Please make sure following fields have blank and not 0 as a value
# of Students Committed,Total # of Students Appeared,# of Students Certified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Level_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordTypeId  &lt;&gt; "0120000000097vo",
ISPICKVAL(Certification_Level__c,"")
)</errorConditionFormula>
        <errorDisplayField>Certification_Level__c</errorDisplayField>
        <errorMessage>Please update the Certification Level!</errorMessage>
    </validationRules>
</CustomObject>